<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Digital Portfolio</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Parse GridView</string>
    <string name="image_label">Add a Image</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_new">Add a Image</string>
    <string name="menu_title">My Images</string>
    <string name="parse_app_id">Client ID</string>
    <string name="parse_client_key">Client Key</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_image">New Image</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="usernameHint">Enter username</string>
    <string name="password">Password:</string>
    <string name="passwordHint">Enter password</string>
    <string name="Login">Login</string>
    <string name="register">Join</string>
    <string name="error_intro">Please</string>
    <string name="error_blank_username">enter password</string>
    <string name="error_join">, and</string>
    <string name="error_blank_password">enter password</string>
    <string name="error_end">.</string>
    <string name="progress_login">Loggin in</string>
    <string name="error_mismatched_passwords">passwords don\'t match</string>
    <string name="progress_signup">Creating account</string>
    <string name="logged_in">Digital Portfolio</string>
    <string name="email">Email:</string>
    <string name="emailHint">Enter Email</string>
    <string name="repeat_password_hint">Repeat Password</string>
    <string name="logout_full">Log out</string>
    <string name="title_activity_settings">Settings</string>

    <string name="private_gallery">My Images</string>
    <string name="public_gallery">Public Images</string>
    <string name="gallery">Gallery</string>

    <string name="Image">Image</string>
    <string name="image_caption">Add image caption</string>
    <string name="Private">Private Image</string>
    <string name="open_camera">Open Camera</string>
    <string name="choose_action">Choose</string>
    <string name="take_picture">Take Picture</string>
    <string name="grid_view">Grid view item</string>

    <string-array name="ratings_array">
        <item>Private Image</item>
        <item>Public Image</item>
    </string-array>
</resources>
