<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/rating_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_image"
        android:layout_alignLeft="@+id/image_preview_image"
        android:layout_alignStart="@+id/image_preview_image" />

    <com.parse.ParseImageView
        android:id="@+id/image_preview_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/add_image"
        android:layout_alignLeft="@+id/add_image"
        android:layout_alignStart="@+id/add_image" />

    <ImageButton
        android:id="@+id/photo_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_photo"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/save_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="65dp"
        android:contentDescription="@string/open_camera" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/image_label"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:id="@+id/add_image" />

    <EditText
        android:id="@+id/image_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/image_caption"
        android:gravity="center_horizontal"
        android:layout_above="@+id/save_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:layout_gravity="right"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/photo_button"
        android:layout_toEndOf="@+id/photo_button"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/photo_button"
        android:layout_toStartOf="@+id/photo_button"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="8dp" />

</RelativeLayout>